--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-  "start": "node index.js"
-}
-,
+    "start": "node index.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -17,6 +16,9 @@
     "ejs": "^3.1.10",
     "env": "^0.0.2",
     "express": "^5.1.0",
+    "lodash-es": "^4.17.21",
+    "lowdb": "^7.0.1",
+    "nanoid": "^5.1.5",
     "node-fetch": "^3.3.2",
     "openai": "^5.1.1",
     "postmark": "^4.0.5"
